# sdbx

./: CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  amd.Dockerfile  intel.Dockerfile  main.py  mypy.ini  pyoxidizer.bzl  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  user-support.yml
.github/workflows/: test.yml
config/default/: config.toml  extensions.toml
docs/examples/configuration/: extra_model_paths.yaml
docs/examples/script_examples/: basic_api_example.py  remote_api_example.py
sdbx/: __init__.py  cli_args.py  cli_args_types.py  config.py  execution_context.py  executor.py  images.py  model_downloader.py  model_management.py  model_management_types.py  model_patcher.py  ops.py  sa_t5.py  sample.py  sampler_helpers.py  samplers.py  sd.py  sd1_clip.py  sd3_clip.py  t5.py  types.py  utils.py
sdbx/analytics/: analytics.py  identity_provider_nt.py
sdbx/api/: __init__.py  api_client.py  api_response.py  exceptions.py  openapi.yaml  openapi_python_config.yaml  rest.py  security_schemes.py  server.py
sdbx/api/apis/: path_to_api.py  tag_to_api.py
sdbx/app/: app_settings.py  user_manager.py
sdbx/auth/: permissions.py
sdbx/client/: aio_client.py  embedded_comfy_client.py  embedded_shadowbox_client.py
sdbx/clients/: embedded.py  manager.py  releases.py
sdbx/cmd/: cuda_malloc.py  execution.bak.py  execution.py  extra_model_paths.py  folder_paths.py  latent_preview.py  main.py  main_pre.py  new_updater.py  openapi_gen.py  server.py
sdbx/component_model/: abstract_prompt_queue.py  files.py
sdbx/distributed/: distributed_prompt_client.py  distributed_prompt_queue.py  distributed_prompt_worker.py  distributed_types.py
sdbx/k_diffusion/: sampling.py
sdbx/nodes/: __init__.py  base.py  base_nodes.py  manager.py  package.py  types.py  vanilla_node_importing.py
sdbx/nodes backup/: base.py  manager.py  package.py  types.py  vanilla_node_importing.py
sdbx/sd1_tokenizer/: vocab.json
sdbx/t5_tokenizer/: tokenizer.json
sdbx/web/: index.html  style.css
sdbx_extras/chainner_models/: model_loading.py
sdbx_extras/nodes/: nodes_audio.py  nodes_images.py  nodes_language.py  nodes_model_advanced.py  nodes_model_merging.py  nodes_open_api.py  nodes_pag.py  nodes_sd3.py  nodes_stable_cascade.py  nodes_video_model.py
tests/: conftest.py
tests-ui/: package.json
tests-ui/tests/: extensions.test.js  groupNode.test.js  users.test.js
tests-ui/utils/: ezgraph.js  index.js  litegraph.js  setup.js
tests/asyncio/: test_asyncio_remote_client.py
tests/distributed/: test_distributed_queue.py
tests/downloader/: test_huggingface_downloads.py
tests/inference/: test_workflows.py
tests/mocks/: sdxl_with_refiner_workflow.py
tests/unit/: test_arithmetic_nodes.py  test_base_nodes.py  test_colormap_nodes.py  test_openapi_nodes.py
(+165 files in other folders)
